--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,23 @@
+body{
+    font-family: 'Nunito', sans-serif;
+    font-weight: 500;
+}
 .cont{
   background-color:#eee; 
-  float:left;
   /* margin: 15px; */
+}
+.flex-center {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 100%;
 }
